<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="username">username</string>
    <string name="clock_alarm">clock alarm</string>
    <string name="control_lights">control lights</string>
    <string name="notification">Notification</string>
    <string name="sign_out">sign out</string>
    <string name="manage_account">manage Account</string>
    <string name="clock_alarm">clock alarm</string>
    <string name="coontrol_string_control_lights">coontrol @string/control_lights</string>
</resources>
