<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="s.ahmadsq.myapplication.adminActivity">

    <GridLayout
        android:layout_width="264dp"
        android:layout_height="213dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/clockadminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock_alarm" />

        <Button
            android:id="@+id/notificationAdminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/notification" />

        <Button
            android:id="@+id/controlLightButtonAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/coontrol_string_control_lights" />

        <Button
            android:id="@+id/manageAccButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/manage_account" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>
