<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="s.ahmadsq.myapplication.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="287dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="263dp"
            android:layout_height="219dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/clockAlarmButton"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:text="@string/clock_alarm" />

            <Button
                android:id="@+id/notificationButton"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/notification" />

            <Button
                android:id="@+id/controlLightsButton"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/control_lights" />

            <Button
                android:id="@+id/signoutButton"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_column="2"
                android:layout_row="2"
                android:text="@string/sign_out" />
        </GridLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
